coffee_table.html

--- a/coffee_table.html
+++ b/coffee_table.html
@@ -8,9 +8,8 @@
     <style>
         ul li{
             margin-top:10px ;
-        }
-        ul{
-            margin-left:10px ;
+            line-height: 10px;
+            width:100px;
         }
     </style>
 </head>
