--- a/div_coffee.html
+++ b/div_coffee.html
@@ -18,7 +18,7 @@
             width: 25%;
             background-color: #F0F0F0;
             float: left;
-            height: 1575px;
+            height: 1775px;
         }
         .info_left ul{
             margin: 0;
@@ -51,7 +51,8 @@
         }
         .bottom{
             width: 100%;
-            height: 27px;
+            height: 38px;
+            float: left;
             background-color:#004B97  ;
         }
         .return{
