--- a/myinfo.html
+++ b/myinfo.html
@@ -30,7 +30,7 @@
             width: 25px;
             height: 25px;
             border-radius: 50%;
-            margin: auto;
+            margin-left: 20px;
             vertical-align: middle;
         }
         .info p{
@@ -39,8 +39,9 @@
             width: 1200px;
         }
         img{
-            width: 200px;
-            height: 255px;
+            width: 280px;
+            height: 350px;
+            display: inline-block;
             position: relative;
         }
         .bottom{
@@ -61,15 +62,17 @@
         .content-movie{
             background-color: #fef0ef;
             display: flex;
-            margin: 0 10px 10px 10px;
+            margin: 0 0px 10px 0px;
             justify-content: center;
             flex-direction: column;
             align-items: center;
+            
         }
         .content_left{
             vertical-align: middle;
             display: inline-block;
             float: left;
+            
         }
         .content_right{
             vertical-align: middle;
@@ -107,19 +110,19 @@
     <div class="info">
         <div class="img" id="mov">
             <p style="font-weight: 800;font-size: 25px;">喜欢的电影</p>
-            <div class="content-movie">
+            <div class="content-movie" >
                 <img src="./images/ad.jpg" alt="">
                 <span>阿呆正传</span>
             </div>
-            <div class="content-movie">
+            <div class="content-movie" >
                 <img src="./images/dm.jpg" alt="">
                 <span>盗梦空间</span>
             </div>
-            <div class="content-movie">
+            <div class="content-movie" > 
                 <img src="./images/kbj.jpg" alt="">
                 <span>看不见的客人</span>
             </div>
-            <div class="content-movie">
+            <div class="content-movie" >
                 <img src="./images/ml.jpg" alt="">
                 <span>美丽人生</span>
             </div>
