enterprice_index.html

--- a/enterprice_index.html
+++ b/enterprice_index.html
@@ -68,13 +68,20 @@
                     <h1>佘子哥の大饭店</h1>
                     <h3>各种各样的美食、甜点与饮品,等待与您的相遇</h3>
                     <button>探索更多</button>
-
-                </div>
-                    
-                
+                </div>            
             </div>  
-            <div class="img1"><img src="./images/2.jpg" alt="" srcset="" ></div>
-            <div class="img1"><img src="./images/4.jpg" alt="" srcset="" > </div>
+            <div class="img1"><img src="./images/2.jpg" alt="" srcset="" >
+                <div class="slide_content">
+                    <h1>佘子哥の大饭店</h1>
+                    <h3>各种各样的美食、甜点与饮品,等待与您的相遇</h3>
+                    <button>探索更多</button>
+                </div>
+            <div class="img1"><img src="./images/4.jpg" alt="" srcset="" > 
+                <div class="slide_content">
+                    <h1>佘子哥の大饭店</h1>
+                    <h3>各种各样的美食、甜点与饮品,等待与您的相遇</h3>
+                    <button>探索更多</button>
+                </div>
         </div>
         <button class="left_pre" >&lt</button>
         <button class="right_next">&gt</button>
