--- a/enterprice_index.html
+++ b/enterprice_index.html
@@ -210,7 +210,7 @@
                     <li><a href="#">首页</a></li>
                     <li><a href="#" class="food_show_id">美食展示</a></li>
                     <li><a href="#" class="team_info_id">团队介绍</a></li>
-                    <li><a href="/about.html" class="about">关于我们</a></li>
+                    <li><a href="/train/about.html" class="about">关于我们</a></li>
                 </ul>            
             </div>       
         </div>
