--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             </div>
             <div class="nav">
                 <ul class="link">
-                    <li><a href="/enterprice_index.html">首页</a></li>
+                    <li><a href="/train//enterprice_index.html">首页</a></li>
                     <li><a href="#" class="food_show_id">美食展示</a></li>
                     <li><a href="#" class="team_info_id">团队介绍</a></li>
                     <li><a href="#">关于我们</a></li>
