--- a/news-detail.html
+++ b/news-detail.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>佘子哥の大饭店</title>
+    <link rel="icon" href="./images/7.jpg" type="img/x-ico" />
     <link rel="stylesheet" href="./CSS/about.css">
     <link rel="stylesheet" href="./CSS/news.detail.css">
     <script src="./jquery-3.4.1.js" ></script>
