--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
 <meta name="keywords" content="百度地图,百度地图API，百度地图自定义工具，百度地图所见即所得工具" />
 <meta name="description" content="百度地图API自定义地图，帮助用户在可视化操作下生成百度地图" />
-<title>百度地图API自定义地图</title>
+<link rel="icon" href="./images/7.jpg" type="img/x-ico" />
+<title>佘子哥の大饭店</title>
 <link rel="stylesheet" href="./CSS/about.css">
 <script src="./jquery-3.4.1.js" ></script>
 <!--引用百度地图API-->
