--- a/enterprice_index.html
+++ b/enterprice_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <link rel="icon" href="./images/7.jpg" type="img/x-ico" />
     <link rel="stylesheet" href="./CSS/index.css">
     <script src="./jquery-3.4.1.js" ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
